--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,12 +5,23 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+name: Node CI
+
+on: [push]
 
 jobs:
   build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: npm install and build webpack
+        run: |
+          npm install
+          npm run build
+
+  test:
 
     runs-on: ubuntu-latest
 
@@ -18,7 +29,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
@@ -26,6 +36,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: npm install, and test
+      run: |
+        npm install
+        npm test
+      env:
+        CI: true
